@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-02T00:54:24Z",
+  "timestamp" : "2022-06-02T08:17:28Z",
   "count_outdated" : 385,
   "uniques_outdated" : 17,
-  "count" : 398,
-  "uniques" : 22,
+  "count" : 404,
+  "uniques" : 23,
   "views" : [
     {
       "timestamp": "2022-05-19T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
