@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 19,
   "uniques": 1,
   "views": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
