@@ -1,3 +1,10 @@
+2022-06-02T08:17:28Z:
+* notice: last 14d: unq all: 1 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 17 385 / 22 398
+* notice: next accum: outdated-unq outdated-all / unq all: 17 385 / 23 404
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: removed / changed dates: [] / [2022-06-02]
+
 2022-06-02T00:54:24Z:
 * notice: last 14d: unq all: 1 13
 * notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 385
